Remove API keys from public repository
- Replaced hardcoded Google AI Studio API keys with placeholders
- Updated UI text to guide users to add their own API key
- Added link to Google AI Studio for easy API key generation
- Ensures API keys are not exposed in public repository

--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ August</textarea>
 <!-- AI settings -->
 <div class="modal" id="aiModal"><div class="sheet">
   <h2>🤖 AI Question Generator (Gemini)</h2>
-  <p>A default API key is provided, but you can paste your own Google AI Studio key (saved locally in your browser).</p>
+  <p>Please add your own Google AI Studio API key (saved locally in your browser). Get your free key at <a href="https://aistudio.google.com/app/apikey" target="_blank" style="color: #22c55e;">Google AI Studio</a>.</p>
   <div class="row"><label style="min-width:140px">API Key</label><input id="aiKey" placeholder="AIza..." style="flex:1"/></div>
       <div class="row"><label style="min-width:140px">Model</label><input id="aiModel" placeholder="gemini-2.0-flash" style="flex:1"/></div>
   <div class="row"><label style="min-width:140px">Quick Switch:</label>
@@ -1892,9 +1892,9 @@ August</textarea>
   const GEMINI_MODEL_DEFAULT='gemini-2.0-flash';
   // API Keys - Main and 2 Backups
   const API_KEYS = {
-    main: 'AIzaSyDpx9ITK7RRlxYgbVaF_gkDJAAdmkjBzoQ',
-    BU1: 'AIzaSyAiH3K8dV-fQ5sRskV5elkw3zGj2UMAtTM',
-    BU2: 'AIzaSyAqBvW8uSr6ie9PkM9XDL3zEMCjy07eCoY'
+    main: 'YOUR_API_KEY_HERE',
+    BU1: 'YOUR_BACKUP_KEY_1_HERE',
+    BU2: 'YOUR_BACKUP_KEY_2_HERE'
   };
   
   // Token tracking for each key
