Fix button layout spacing
- Reduced gap between buttons from 10px to 6px
- Reduced button padding from 10px 14px to 8px 12px
- Shortened Random button text from 'Random Student' to 'Random'
- Kept Settings button with full text for clarity
- All buttons now fit on one line without text wrapping

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
   .stats{display:flex;gap:8px;flex-wrap:wrap}
   .stat{background:#0b1226;border:1px solid var(--stroke);border-radius:12px;padding:6px 10px;font-weight:700}
 
-  .actions{display:flex;gap:10px;align-items:center;justify-content:flex-end}
-  .topbtn{background:#0b1226;border:1px solid var(--stroke);color:var(--ink);padding:10px 14px;border-radius:14px;font-weight:900;font-size:16px;cursor:pointer;box-shadow:0 10px 20px rgba(0,0,0,.35);transition:.12s transform,.12s box-shadow;height:42px;display:inline-flex;align-items:center;touch-action:manipulation;min-height:44px}
+  .actions{display:flex;gap:6px;align-items:center;justify-content:flex-end}
+  .topbtn{background:#0b1226;border:1px solid var(--stroke);color:var(--ink);padding:8px 12px;border-radius:14px;font-weight:900;font-size:16px;cursor:pointer;box-shadow:0 10px 20px rgba(0,0,0,.35);transition:.12s transform,.12s box-shadow;height:42px;display:inline-flex;align-items:center;touch-action:manipulation;min-height:44px}
   .topbtn:active{transform:translateY(1px) scale(.98);box-shadow:0 6px 12px rgba(0,0,0,.35)}
   #randomBtn{background:radial-gradient(120% 120% at 10% 0%, var(--brand2), var(--brand1));color:#06121a;border:none;touch-action:manipulation}
   #readNamesBtn{background:#0b1226;border:1px solid var(--stroke);color:#dc2626;font-weight:bold;touch-action:manipulation}
@@ -396,7 +396,7 @@
       <button class="topbtn" id="quickReset">Reset</button>
       <button class="topbtn" id="readAloudBtn">🗣️</button>
       <button class="topbtn" id="readNamesBtn" style="font-weight: bold; color: #dc2626;">A</button>
-      <button class="topbtn" id="randomBtn">🎡 Random Student</button>
+      <button class="topbtn" id="randomBtn">🎡 Random</button>
       <button class="topbtn" id="fullscreenBtn">[ ]</button>
     </div>
   </div>
